# mbqc-tn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: README.md  api.md  architecture.md  guide.md  quick-start.md  troubleshooting.md
docs/docs_for_ai/: guide_for_ai_users.md  project_ai_instructions.md  status.md
docs/graphix_lab/: 00_project_scope.md  01_architecture.md  02_public_api_contract.md  03_graphix_integration.md  04_visualization_trace.md  05_qiskit_frontend.md  06_testing_validation.md  07_release_packaging.md  08_roadmap.md  09_template_integration.md
examples/: backend_comparison.py  bell_like_pattern.py  cli_usage.py  library_usage.py  one_qubit_rotation.py  qiskit_import.py  trace_animation.py  trace_slider.py
graphix_lab_vibe_template_codex_pack/: AGENTS.md  CODEX_PROMPTS.md  COPY_CHECKLIST.md  README.md  TEMPLATE_BOOTSTRAP_VALUES.md
graphix_lab_vibe_template_codex_pack/prompts/: 00_template_bootstrap.md  01_project_docs_and_dependencies.md  02_graphix_capability_adapter.md  03_domain_models_and_public_api.md  04_lab_circuit_wrapper.md  05_lab_pattern_wrapper.md  06_command_introspection.md  07_summary_explain_resources.md  08_simulation_runner.md  09_syntactic_trace.md  10_static_visualization.md  11_matplotlib_slider.md  12_backend_comparison.md  13_qiskit_adapter.md  14_examples_and_docs.md  15_ci_packaging_release.md  16_review_hardening.md  ALL_PROMPTS_CONSOLIDATED.md  MASTER_SEQUENCE.md  REVIEW_PROMPT.md
graphix_lab_vibe_template_codex_pack/repo_docs_to_copy/: PYPROJECT_DEPENDENCY_PATCH.md  README_GRAPHIX_LAB_ADDENDUM.md
graphix_lab_vibe_template_codex_pack/repo_docs_to_copy/docs/docs_for_ai/: graphix_lab_status_addendum.md
graphix_lab_vibe_template_codex_pack/repo_docs_to_copy/docs/graphix_lab/: 02_public_api_contract.md  05_qiskit_frontend.md  07_release_packaging.md  README.md
scripts/: bootstrap_smoke.py  run_template_command.py
src/graphix_lab/: __init__.py  cli.py  public_api.py
src/graphix_lab/app/: __init__.py  bootstrap_service.py  circuit_service.py  clean_service.py  pattern_service.py  simulation_service.py  summary_service.py  tooling_service.py  visualization_service.py
src/graphix_lab/domain/: __init__.py  commands.py  errors.py  simulation.py  summaries.py  template_metadata.py  traces.py
src/graphix_lab/infrastructure/: __init__.py  graphix_adapter.py  graphix_capabilities.py  graphix_runtime.py  qiskit_adapter.py  temporary_workspaces.py  text_files.py
src/project_name/: __init__.py  cli.py
src/project_name/app/: bootstrap_service.py
src/project_name/domain/: __init__.py  template_metadata.py
src/project_name/infrastructure/: process_runner.py
tests/: conftest.py
tests/integration/: test_bootstrap.py  test_cli.py  test_graphix_runtime_integration.py
tests/smoke/: test_examples.py
tests/unit/: test_bootstrap_smoke.py  test_ci_workflow.py  test_clean.py  test_cli_programmatic.py  test_dependabot_config.py  test_graphix_capabilities.py  test_graphix_runtime.py  test_lab_circuit.py  test_lab_pattern.py  test_public_api.py  test_qiskit_adapter.py  test_template_footprint.py  test_test_harness.py  test_text_files.py  test_tooling.py  test_wrapper_launcher.py
