[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "graphix-lab"
version = "0.1.0"
description = "A small, educational usability layer over Graphix for measurement-based quantum computing experiments. The project wraps Graphix patterns and circuits with clearer summaries, command introspection, simulation reports, Matplotlib/NetworkX visualizations, step traces, and optional Qiskit import helpers without reimplementing Graphix core backends."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alejandro Mata Ali" }]
keywords = ["python", "template", "vibe-coding", "software"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "graphix>=0.3.5,<0.4",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
qiskit = ["qiskit>=2,<3"]
examples = ["jupyter>=1.1"]
dev = [
    "pip-licenses>=5.0.0",
    "pyright>=1.1.408",
    "pytest>=8.4.2",
    "ruff>=0.11.11",
]

[project.scripts]
graphix-lab = "graphix_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphix_lab"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [
    ".tmp",
    ".venv",
    ".hypothesis",
    ".mypy_cache",
    ".pyright",
    ".pytest-tmp",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "htmlcov",
    "pytest-cache",
    "pytest-temp",
    "pytest-cache-files-*",
    "test-artifacts",
]
line-length = 100
src = ["src", "tests", "examples", "scripts"]
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = ["ANN", "ARG", "B", "C4", "E", "F", "I", "N", "RUF", "SIM", "UP"]
ignore = ["ANN401"]

[tool.pyright]
include = ["src", "tests", "examples", "scripts"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.vibe_template]
project_title = "Graphix Lab"
distribution_name = "graphix-lab"
package_name = "graphix_lab"
author_name = "Alejandro Mata Ali"
initial_version = "0.1.0"
project_scope = "A small, educational usability layer over Graphix for measurement-based quantum computing experiments. The project wraps Graphix patterns and circuits with clearer summaries, command introspection, simulation reports, Matplotlib/NetworkX visualizations, step traces, and optional Qiskit import helpers without reimplementing Graphix core backends."
license_id = "MIT"
bootstrap_required = false
